sat overskrift ind pga fejl
indsat overskrift i section så den ik fjerner fejl

--- a/VR/index.html
+++ b/VR/index.html
@@ -26,7 +26,8 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, rem. At nulla corrupti sed incidunt tempora laborum mollitia nemo, in.</p>
 	</section>
 	
-	<section>	
+	<section>
+		<h2>Oplev VR</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Illo et, officiis natus aliquid fugit magnam officia culpa porro minus, esse ex. Dicta, consequatur! Asperiores accusamus expedita laudantium, eveniet explicabo recusandae!</p>
 
 		<p>
