--- a/VR/vr_kontakter.html
+++ b/VR/vr_kontakter.html
@@ -45,8 +45,8 @@
 		</tr>
 		<tr>
 			<!-- data -->
-			<td>VR Space Institute</td>
-			<td><em>Jens Petersen</em></td>
+			<td>Future Virtual Reality Aps</td>
+			<td><em>Andrea Mortensen</em></td>
 			<td>
 				<figure>
 					<img src="images/vr2.jpg" width="140" height="100" alt="VR Space Institute"/>
@@ -56,8 +56,8 @@
 		</tr>
 		<tr>
 			<!-- data -->
-			<td>VR Space Institute</td>
-			<td><em>Jens Petersen</em></td>
+			<td>VR4You</td>
+			<td><em>Nick Name</em></td>
 			<td>
 				<figure>
 					<img src="images/vr3.jpg" width="140" height="100" alt="VR Space Institute"/>
