--- a/VR/vr_kontakter.html
+++ b/VR/vr_kontakter.html
@@ -50,7 +50,7 @@
 			<td>
 				<figure>
 					<img src="images/vr2.jpg" width="140" height="100" alt="VR Space Institute"/>
-					<figcaption>VR Space Institute</figcaption>
+					<figcaption>Future Virtual Reality Aps</figcaption>
 				</figure>
 			</td>
 		</tr>
@@ -61,7 +61,7 @@
 			<td>
 				<figure>
 					<img src="images/vr3.jpg" width="140" height="100" alt="VR Space Institute"/>
-					<figcaption>VR Space Institute</figcaption>
+					<figcaption>VR4You Aps</figcaption>
 				</figure>
 			</td>
 		</tr>
