--- a/css_træning/opgave/css_traening_opgave.html
+++ b/css_træning/opgave/css_traening_opgave.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Opgave: Typografi</title>
+	<link rel="stylesheet" href="stylesheet.css">
     <style>
         /* Skriv CSS her */
 		
