--- a/css_træning/index.html
+++ b/css_træning/index.html
@@ -20,11 +20,32 @@
 	
 </head>
 <body>
-	<!-- Inline style -->
-    <h1 style="color: red;">En overskrift</h1>
+    <h1 id="first_headline">En overskrift</h1>
 	<h1>En til overskrift</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aut qui accusamus omnis repellat fugiat, iste ipsam sit. Repellendus iste commodi, eius fuga aliquid, molestias labore voluptas ut architecto doloremque.</p>
+	<p>Lorem ipsum dolor sit <span>amet</span>, consectetur adipisicing elit. Aliquam aut qui accusamus omnis repellat fugiat, iste ipsam sit. Repellendus iste commodi, eius <span class="highligt">fuga aliquid</span>, molestias labore voluptas ut architecto doloremque.</p>
 	<a href="side2.html">Dette er et link til side 2</a>
 	
+	<div id="box1">
+		<ul>
+			<li class="firbenet">Hund</li>
+			<li class="firbenet">Kat</li>
+			<li class="tobenet">Høne</li>
+			<li class="firbenet">Hest</li>
+			<li class="tobenet">Struds</li>
+		</ul>
+	</div>
+	<div id="box2">
+		<ul>
+			<li class="firbenet">Hund</li>
+			<li class="firbenet">Kat</li>
+			<li class="tobenet">Høne</li>
+			<li class="firbenet">Hest</li>
+			<li class="tobenet">Struds</li>
+		</ul>
+	</div>
+	
+	<p class="text">Tekst placeret med en position property - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis facere numquam mollitia error doloribus neque, dicta consequatur eum perspiciatis vitae laudantium inventore labore recusandae, atque quasi vero pariatur tempore, illo.</p>
+	
+	<p class="text2">Tekst 2 placeret med en position property - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis facere numquam mollitia error doloribus neque, dicta consequatur eum perspiciatis vitae laudantium inventore labore recusandae, atque quasi vero pariatur tempore, illo.</p>
 </body>
 </html>
