--- a/css_træning/opgave2_layout/layout_traening.html
+++ b/css_træning/opgave2_layout/layout_traening.html
@@ -8,6 +8,7 @@
 		body {
 			font-family: sans-serif;
 			font-size: 0.9em;
+			font-weight: bold;
 		}
 		
 		.container {
@@ -15,6 +16,8 @@
 			width: 960px;
 			flex-wrap: wrap;
 			justify-content: space-around;
+			margin-left: auto;
+			margin-right: auto;
 		}
 		
 		.item {
